[package]
name = "qabuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
function_name = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "qabuild"
path = "src/qabuild.rs"
